--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
 }
 
 /* Typography */
+
 html {
   font-size: 62.5%;
 }
@@ -16,7 +17,6 @@ body {
   font-family: Inter, Arial, Helvetica, sans-serif;
   font-size: 2.4rem;
   line-height: 1.5;
-  padding: 2rem;
 }
 
 h1,
@@ -58,6 +58,7 @@ p {
 }
 
 /* Links */
+
 a {
   text-decoration: none;
 }
@@ -82,5 +83,39 @@ a {
 @media screen and (min-width: 1024px) {
   .link-arrow {
     font-size: 1.5rem;
+  }
+}
+
+/* Badges */
+
+.badge {
+  border-radius: 20px;
+  font-size: 2rem;
+  font-weight: 600;
+  padding: 0.5rem 2rem;
+  white-space: nowrap;
+}
+
+.badge--primary {
+  background: var(--color-primary);
+  color: #fff;
+}
+
+.badge--secondary {
+  background: var(--color-secondary);
+  color: #fff;
+}
+
+.badge--small {
+  font-size: 1.6rem;
+}
+
+@media screen and (min-width: 1024px) {
+  .badge {
+    font-size: 1.5rem;
+  }
+
+  .badge--small {
+    font-size: 1.2rem;
   }
 }
