--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,9 @@
 :root {
+  --color-accent: #ff3400;
+  --color-body: #918ca4;
+  --color-headings: #1b0760;
   --color-primary: #2584ff;
   --color-secondary: #00d9ff;
-  --color-accent: #ff3400;
-  --color-headings: #1b0760;
-  --color-body: #918ca4;
 }
 
 /* Typography */
@@ -23,8 +23,8 @@ h1,
 h2,
 h3 {
   color: var(--color-headings);
-  margin-top: 0;
   margin-bottom: 1rem;
+  margin-top: 0;
 }
 
 h1 {
@@ -65,9 +65,9 @@ a {
 
 .link-arrow {
   color: var(--color-accent);
-  text-transform: uppercase;
   font-size: 2rem;
   font-weight: bold;
+  text-transform: uppercase;
 }
 
 .link-arrow::after {
@@ -117,5 +117,38 @@ a {
 
   .badge--small {
     font-size: 1.2rem;
+  }
+}
+
+/* Lists */
+
+.list {
+  color: var(--color-headings);
+  list-style: none;
+  padding-left: 0;
+}
+
+.list--inline .list__item {
+  display: inline-block;
+  margin-right: 2rem;
+}
+
+.list--bold {
+  font-weight: bold;
+}
+
+.list--tick {
+  list-style-image: url(../icons/tick.svg);
+  padding-left: 3rem;
+}
+
+.list--tick .list__item {
+  padding-left: 1rem;
+  margin-bottom: 2rem;
+}
+
+@media screen and (min-width: 1024px) {
+  .list--tick .list__item {
+    padding-left: 0;
   }
 }
