--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,8 @@
 :root {
+  --border-radius: 30px;
   --color-accent: #ff3400;
   --color-body: #918ca4;
+  --color-border: #ccc;
   --color-headings: #1b0760;
   --color-primary: #2584ff;
   --color-secondary: #00d9ff;
@@ -245,8 +247,8 @@ a {
 /* Inputs */
 
 .input {
-  border-radius: 30px;
-  border: 1px solid #ccc;
+  border-radius: var(--border-radius);
+  border: 1px solid var(--color-border);
   color: var(--color-headings);
   font-size: 2rem;
   outline: 0;
@@ -255,6 +257,21 @@ a {
 
 ::placeholder {
   color: #cdcbd7;
+}
+
+.input-group {
+  border: 1px solid var(--color-border);
+  border-radius: var(--border-radius);
+  display: flex;
+}
+
+.input-group .input {
+  border: 0;
+  flex-grow: 1;
+}
+
+.input-group .btn {
+  margin: 4px;
 }
 
 @media screen and (min-width: 1024px) {
