--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@
   --border-radius: 30px;
   --color-accent: #ff3400;
   --color-body: #918ca4;
+  --color-body-darker: #5c5577;
   --color-border: #ccc;
   --color-headings: #1b0760;
   --color-primary: #2584ff;
@@ -332,10 +333,10 @@ a {
 }
 
 .plan__description {
+  display: block;
   font-size: 2rem;
   font-weight: 300;
   letter-spacing: 2px;
-  display: block;
 }
 
 .plan .list__item {
@@ -350,11 +351,11 @@ a {
 
 .plan--popular .card__header::before {
   content: url(../images/popular.svg);
-  width: 40px;
   display: inline-block;
   position: absolute;
-  top: -6px;
   right: 5%;
+  top: -6px;
+  width: 40px;
 }
 
 @media screen and (min-width: 1024px) {
@@ -378,8 +379,8 @@ a {
 /* Media Component */
 
 .media {
-  margin: 0 1rem;
   display: flex;
+  margin: 0 1rem;
 }
 
 .media__body {
@@ -388,4 +389,53 @@ a {
 
 .media__image {
   margin-top: 1rem;
+}
+
+/* Quotes */
+.quote {
+  color: var(--color-body-darker);
+  font-size: 3rem;
+  font-style: italic;
+  line-height: 1.3;
+}
+
+.quote__text::before {
+  content: open-quote;
+}
+
+.quote__text::after {
+  content: close-quote;
+}
+
+.quote .media__body {
+  font-style: normal;
+}
+
+.quote__author {
+  font-size: 3rem;
+  margin-bottom: 0;
+}
+
+.quote__organization {
+  color: var(--color-headings);
+  font-size: 2rem;
+  opacity: 0.4;
+}
+
+.quote .media__image {
+  margin: 0;
+}
+
+@media screen and (min-width: 1024px) {
+  .quote {
+    font-size: 2rem;
+  }
+
+  .quote__author {
+    font-size: 2.4rem;
+  }
+
+  .quote__organization {
+    font-size: 1.6rem;
+  }
 }
