--- a/css/styles.css
+++ b/css/styles.css
@@ -392,6 +392,7 @@ a {
 }
 
 /* Quotes */
+
 .quote {
   color: var(--color-body-darker);
   font-size: 3rem;
@@ -437,5 +438,23 @@ a {
 
   .quote__organization {
     font-size: 1.6rem;
+  }
+}
+
+/* Grids */
+
+.grid {
+  display: grid;
+}
+
+@media screen and (min-width: 768px) {
+  .grid--1x2 {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .grid--1x3 {
+    grid-template-columns: repeat(3, 1fr);
   }
 }
