--- a/components/callouts.html
+++ b/components/callouts.html
@@ -7,6 +7,6 @@
         </p>
       </div>
       
-      <a href="#" class="btn btn--secondary btn--strectched">Get Started</a>
+      <a href="#" class="btn btn--secondary btn--stretched">Get Started</a>
     </div>
 </div>
