--- a/css/styles.css
+++ b/css/styles.css
@@ -37,6 +37,7 @@ h1,
 h2,
 h3 {
   color: var(--color-headings);
+  line-height: 1.1;
   margin-bottom: 1rem;
   margin-top: 0;
 }
@@ -248,7 +249,7 @@ a {
   background: #ec3000;
 }
 
-.btn--strectched {
+.btn--stretched {
   padding-left: 6rem;
   padding-right: 6rem;
 }
@@ -679,5 +680,33 @@ a {
 
   .nav__item {
     border-bottom: 0;
+  }
+}
+
+/* Hero */
+
+.hero {
+  clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 0% 100%);
+}
+
+.hero__tagline {
+  color: #b9c3cf;
+  font-size: 2rem;
+  letter-spacing: 1.5px;
+  margin: 2rem 0 5rem;
+}
+
+.hero__image {
+  width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+  .hero {
+    padding-top: 0;
+  }
+
+  .hero__content {
+    align-self: center;
+    text-align: left;
   }
 }
