Build article component.

--- a/css/styles.css
+++ b/css/styles.css
@@ -773,3 +773,17 @@ a {
   max-width: 500px;
   margin: 0 auto;
 }
+
+/* Features Block */
+
+.feature {
+  gap: 4rem 2rem;
+}
+
+.feature__heading {
+  margin: 1rem 0;
+}
+
+.feature__image {
+  width: 100%;
+}
